# Dichromate

./: .gitattributes  .gitignore  LICENSE  LICENSE.branding  LICENSE.dichromate  LICENSE.hexavalent  LICENSE.updater  README.md  args.gn  version.txt
config/: args.gn
docs/: Building.md
patches/: 0001-switch-to-fstack-protector-strong.patch  0002-enable-fwrapv-in-Clang-for-non-UBSan-builds.patch  0003-enable-ftrivial-auto-var-init-zero.patch  0004-disable-broken-warning-for-auto-var-init.patch  00044-Enable-V8-Virtual-Memory-Cage.patch  0005-disable-seed-based-field-trials.patch  0006-disable-navigation-error-correction-by-default.patch  0007-disable-network-prediction-by-default.patch  0008-disable-hyperlink-auditing-by-default.patch  0009-disable-showing-popular-sites-by-default.patch  0010-disable-article-suggestions-feature-by-default.patch  0011-disable-sensors-access-by-default.patch  0012-disable-third-party-cookies-by-default.patch  0013-disable-background-sync-by-default.patch  0014-disable-payment-support-by-default.patch  0015-disable-media-router-media-remoting-by-default.patch  0016-disable-media-router-by-default.patch  0017-disable-offering-translations-by-default.patch  0018-disable-browser-sign-in-feature-by-default.patch  0019-disable-browser-autologin-by-default.patch  0020-disable-safe-browsing-reporting-opt-in-by-default.patch  0021-disable-unused-safe-browsing-option-by-default.patch  0022-enable-prefetch-privacy-changes-by-default.patch  0023-enable-split-cache-by-default.patch  0024-enable-partitioning-connections-by-default.patch  0025-enable-dubious-Do-Not-Track-feature-by-default.patch  0027-disable-component-updater-pings-by-default.patch  (+57 more)
(+10 files in other folders)
