target_os = "win"

target_cpu = "x64"

is_official_build = true

is_component_build = false

is_debug = false

ffmpeg_branding = "Chrome"

proprietary_codecs = true

enable_widevine = true

symbol_level = 0

blink_symbol_level = 0

enable_resource_allowlist_generation = false

v8_symbol_level = 0

enable_remoting = false

enable_reporting = false

enable_nacl = false

disable_fieldtrial_testing_config = true

use_official_google_api_keys = false

enable_hangout_services_extension = true