# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
target_os = "win"

target_cpu = "x64"

is_official_build = true

is_component_build = false

is_debug = false

ffmpeg_branding = "Chrome"

proprietary_codecs = true

enable_widevine = true

symbol_level = 0

blink_symbol_level = 0

enable_resource_allowlist_generation = false

v8_symbol_level = 0

enable_remoting = false

enable_reporting = false

enable_nacl = false

disable_fieldtrial_testing_config = true

use_official_google_api_keys = false

enable_hangout_services_extension = true

rtc_use_h264 = true

thin_lto_enable_optimizations = true

use_thin_lto = true

use_lld = true

enable_platform_mpeg_h_audio = true

rtc_build_examples = false

enable_mse_mpeg2ts_stream_parser = true

enable_iterator_debugging = false

enable_platform_hevc = true

enable_platform_ac3_eac3_audio = true

enable_vr = false

use_cfi_cast = true

chrome_pgo_phase = 0

cc_wrapper = "sccache"
